update. home, about, test post

--- a/about/about.mdx
+++ b/about/about.mdx
@@ -6,11 +6,11 @@ title: "About"
 
 ​20.07 코딩 공부를 시작한 코딩뉴비입니다.
 
-​현재 티맥스소프트에서 쿠버네티스 기반 웹 IDE 개발중입니다.
+​현재 티맥스소프트에서 개발중입니다.
 
-자바, 타입스크립트 등 여러가지를 배우며 정신이 없지만,
+자바, 쿠버네티스, 타입스크립트 등 여러가지를 배우며 정신이 없지만,
 
-구현의 재미와 디버깅의 쾌감을 느끼며 공부하고 있습니다.
+구현의 재미와 문제해결 쾌감을 느끼며 공부하고 있습니다.
 
 ​**기초**를 탄탄히 다지면서 가파른 러닝커브를 보이겠습니다.
 
@@ -22,16 +22,17 @@ title: "About"
 
 - 풀스택 개발 (spring-java / nestJS-typescript)
 - 쿠버네티스
-- 새로운 기술들
+- 식품 지식을 활용한 빅데이터 분석
 
 ## 활동 / 프로젝트
 
 - 쿠버네티스 기반 웹 IDE
-  - 백엔드(spring) user CRUD, 프로젝트 pod 생성 삭제
-  - rook으로 pod간 디렉터리 공유
-  - 사용자 페이지 (react/material ui)
-- 우버이츠 클론코딩 / [git hub 링크](https://github.com/hunman89/nuber-eats-backend)
-  - nestJS
+  - 백엔드(spring) : user CRUD, pod 생성 삭제
+  - k8s: pod deploy, rook으로 pod간 디렉터리 공유
+  - 프론트엔드(react): 사용자 페이지
+- 우버이츠 클론코딩
+  - 백엔드 : [git hub 링크](https://github.com/hunman89/nuber-eats-backend)
+  - 프론트엔드 : [git hub 링크](https://github.com/hunman89/nuber-eats-frontend)
 - 에어비엔비 클론코딩 / [git hub 링크](https://github.com/hunman89/airbnb-clone)
   - Django
 - 장소 추천 웹사이트 (Eody) / [git hub 링크](https://github.com/socialDe/Eody)
