add. table of contents

--- a/posts/test.mdx
+++ b/posts/test.mdx
@@ -1,6 +1,6 @@
 ---
 title: "My First Post"
-date: "2021-07-23"
+date: "2021-10-01"
 ---
 
 # This is my first blog post! Isn't it _great_?
@@ -9,7 +9,7 @@ date: "2021-07-23"
 
 >test script
 
-#### test
+## test
 
 Some of my **favorite** things are:
 
@@ -63,3 +63,5 @@ Some of my **favorite** things are:
 - Petting dogs
 - Singing
 - Eating potato-based foods
+
+# This is my first blog post! Isn't it _great_?
