add. more component and example

--- a/posts/test.mdx
+++ b/posts/test.mdx
@@ -5,23 +5,11 @@ date: "2021-10-01"
 
 # This is my first blog post! Isn't it _great_?
 
-## test
+## Test h2
 
->test script
+> test script blockquote
 
-## test
-
-Some of my **favorite** things are:
-
-- Petting dogs
-- Singing
-- Eating potato-based foods
-
-## test2
-
->test script
-
-#### test
+## Test h2
 
 Some of my **favorite** things are:
 
@@ -29,39 +17,12 @@ Some of my **favorite** things are:
 - Singing
 - Eating potato-based foods
 
-## test3
+### Test h3
 
->test script
-
-#### test
+#### test h4
 
 Some of my **favorite** things are:
 
 - Petting dogs
 - Singing
 - Eating potato-based foods
-
-## test4
-
->test script
-
-#### test
-
-Some of my **favorite** things are:
-
-- Petting dogs
-- Singing
-- Eating potato-based foods
-
-## test5
->test script
-
-#### test
-
-Some of my **favorite** things are:
-
-- Petting dogs
-- Singing
-- Eating potato-based foods
-
-# This is my first blog post! Isn't it _great_?
